# shacl-kernel

./: .gitignore  EXAMPLES.ipynb  EXAMPLES.md  EXAMPLES_FULL.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_SUMMARY.md  LICENSE  NOTICE  README.md  example.ipynb  pyproject.toml  setup.py  test_kernel.py  test_sparql.py
shacl_kernel/: __init__.py  __main__.py  install.py  kernel.py  kernel.py.bak
shacl_kernel/sparql/: __init__.py  connection.py  constants.py  drawgraph.py  language.py  magics.py  utils.py
