[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "shacl-kernel"
version = "1.0.0"
description = "A Jupyter kernel for SHACL (Shapes Constraint Language)"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "SHACL Kernel Contributors"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: IPython",
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Shells",
]
dependencies = [
    "ipykernel>=6.0.0",
    "rdflib>=6.0.0",
    "pyshacl>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/jimwhite/shacl-kernel"
Repository = "https://github.com/jimwhite/shacl-kernel"

[project.scripts]
install-shacl-kernel = "shacl_kernel.install:main"

[tool.setuptools]
packages = ["shacl_kernel"]
